# pyRTC

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  NEXT_RELEASE_ISSUES.md  README.md  REFACTOR_PLAN.md  RELEASE_1_0_PLAN.md  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements-test.txt  requirements.txt  run_pytest_conda_matrix.sh  setup.py
.github/workflows/: cross-platform-smoke.yml  draft-pdf.yml  publish-package.yml  python-install.yml
MAPS/: RTC.py  config.yaml  softRTC.py
REVOLT/: RTC.py  config.yaml  sciCamProcess.py  softRTC.py
SHARP_LAB/: ALPAODM.py  BAX118  BAX118.acfg  RTC.py  RTC_DOCRIME_SWEEP.py  RTC_PyWFS.py  RTC_opt_extended.py  RTC_predict.py  RTC_predict_sweep.py  RTC_predict_validation.py  RTCsweep.py  basicPredictRTC.py  config.yaml  config_SR.yaml  config_basic_predict_pywfs.yaml  config_predict.yaml  config_pywfs.yaml  config_pywfs_2026.yaml  filterFlat.npy  floating_test.ipynb  get_diverse_dataset.py  predictDebugger.ipynb  predict_sweep_output.txt  rtc.ipynb  rtc.py  rtc_OOPAOSim.ipynb  simconfig.yaml  softRTC.py  softRTCPyWFS.py  startSystem.py  startSystemPyWFS.py  sub_aperture_alignment.ipynb  temp_flat.npy  validSubAps.npy  ximeaWFS.py  zero_wfc.npy
SUPERPAOWER/: RTC.py  config.yaml  softRTC.py
benchmarks/: __init__.py  ao_loop_bench.py  ao_loop_bench_baseline.json  ao_loop_bench_smoke.json  ao_loop_bench_smoke_table.md  check_perf_baseline.py  core_compute_bench.py  perf_smoke.py  perf_smoke_baseline.json  perf_smoke_report.json  readme_benchmark_report.json  readme_benchmark_table.md  readme_benchmark_table.py
docs/source/: api_reference.rst  build_and_run.sh  conf.py  index.rst
examples/aotpy/: minimal_aotpy_export_example.py
paper/: paper.md
pyRTC/: DualArray.py  GenericComponent.py  Loop.py  Modulator.py  Optimizer.py  Pipeline.py  RTC.py  ScienceCamera.py  SlopesProcess.py  Telemetry.py  WavefrontCorrector.py  WavefrontSensor.py  __init__.py  component_descriptors.py  config_runtime.py  config_schema.py  latency.py  logging_utils.py  pyRTCComponent.py  utils.py
pyRTCView/: clearShms.py  launch_all  measure_latency.py  monitor1DShm.py  opticalGainGui.py  pyRTCView.py
tests/: conftest.py  dark_test.npy  test_aotpy_export.py  test_component_descriptors.py  test_components_core.py  test_config_validation.py  test_flat.npy  test_hardware_adapters.py  test_hardware_optimizers.py  test_logging_utils.py  test_loop.py  test_manager.py  test_manager_gui.py  test_measure_latency_cli.py  test_pipeline.py  test_public_api.py  test_science_camera.py  test_slopesprocess.py  test_synthetic_example.py  test_synthetic_hardware.py  test_telemetry.py  test_utils.py  test_validate_dist_install.py  test_viewer_boundary.py  test_viewer_cli.py  test_wavefront_corrector.py  test_wavefront_sensor.py  test_wfc.py  test_wfs.py  testsupport.py
(+140 files in other folders)
